[package]
name = "aether-kinds"
version.workspace = true
edition.workspace = true

[dependencies]
# ADR-0032 unified the schema vocabulary under a no_std-capable
# aether-hub-protocol, so the `descriptors` feature gate that used to
# guard the Schema trait is gone — every consumer that pulls aether-kinds
# gets schema-ready types. The hub-protocol dep stays no-default-features
# here since aether-kinds is pulled by wasm guests too.
aether-mail = { path = "../aether-mail", features = ["derive"] }
aether-hub-protocol = { path = "../aether-hub-protocol", default-features = false }
bytemuck = { version = "1.19", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
# ADR-0041 I/O kind roundtrip tests exercise the postcard wire
# directly (the mail-path `encode_struct` helper wraps this).
postcard = { version = "1.1", default-features = false, features = ["alloc"] }

# Issue #243: descriptors.rs::all() iterates the substrate-native
# `inventory` slot to materialize the descriptor list. inventory's
# `submit!` macro (called from the Kind derive) references `::inventory`
# at every call site, so each crate that derives `Kind` for native
# builds needs `inventory` reachable. Wasm-only consumers don't (the
# derive's `cfg(not(target_arch = "wasm32"))` gate skips emission).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = "0.3"
