[package]
name = "aether-kinds"
version.workspace = true
edition.workspace = true

[dependencies]
# ADR-0069: the data layer (typed ids, schema vocab, Kind/Schema
# traits) lives in `aether-data`. `aether-kinds` is the substrate's
# vocabulary — concrete kinds + the well-known mailboxes registry.
aether-data = { path = "../aether-data", features = ["derive"] }
bytemuck = { version = "1.19", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
# ADR-0041 I/O kind roundtrip tests exercise the postcard wire
# directly (the mail-path `encode_struct` helper wraps this).
postcard = { version = "1.1", default-features = false, features = ["alloc"] }

# Issue #243: descriptors.rs::all() iterates the substrate-native
# `inventory` slot to materialize the descriptor list. inventory's
# `submit!` macro (called from the Kind derive) references `::inventory`
# at every call site, so each crate that derives `Kind` for native
# builds needs `inventory` reachable. Wasm-only consumers don't (the
# derive's `cfg(not(target_arch = "wasm32"))` gate skips emission).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = "0.3"
