[package]
name = "aether-kinds"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# ADR-0069: the data layer (typed ids, schema vocab, Kind/Schema
# traits) lives in `aether-data`. `aether-kinds` is the substrate's
# vocabulary — concrete kinds + the well-known mailboxes registry.
aether-data = { path = "../aether-data", features = ["derive"] }
# ADR-0048 / issue 1464: `Mat4Apply` is a cast-shaped kind composing
# `aether_math::{Mat4, Vec4}` directly. `aether-math` is acyclic — it
# depends on `aether-data` but never on `aether-kinds`.
aether-math = { path = "../aether-math" }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }

# Issue #243: descriptors.rs::all() iterates the substrate-native
# `inventory` slot to materialize the descriptor list. inventory's
# `submit!` macro (called from the Kind derive) references `::inventory`
# at every call site, so each crate that derives `Kind` for native
# builds needs `inventory` reachable. Wasm-only consumers don't (the
# derive's `cfg(not(target_arch = "wasm32"))` gate skips emission).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = { workspace = true }

[lints]
workspace = true
