[package]
name = "aether-kit"
version.workspace = true
edition.workspace = true
license.workspace = true

# The gameplay-systems layer: reusable actors built on the engine that
# any tile game on the substrate can load. Each system is its own
# actor; `export!(...)` packs the ones a build wants into a single
# cdylib (ADR-0096 multi-actor module). Trunk types (the mail shapes
# other actors send these systems) live at the crate root for
# consumers; the runtime actors live in `runtime` and emit the cdylib
# FFI exports under wasm32. Host builds compile the runtime into the
# rlib with the FFI exports inert, so integration tests link the same
# artifact.

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# The `runtime` feature pulls in the `runtime` module that calls
# `aether_actor::export!()`. Consumers that only need the trunk mail
# shapes take `default-features = false` so their wasm builds see the
# kind types without the FFI exports. On by default so a bare
# wasm32 build still produces the full component artifact.
default = ["runtime"]
runtime = []

[dependencies]
aether-actor = { path = "../aether-actor" }
aether-capabilities = { path = "../aether-capabilities", default-features = false, features = ["render", "ui"] }
aether-data = { path = "../aether-data", features = ["derive"] }
aether-kinds = { path = "../aether-kinds" }
aether-math = { path = "../aether-math" }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
# Substrate-side `aether.log` (ADR-0060) for warn-log on rejected mail
# (out-of-bounds teleport, etc.). Default-features-off per the SDK pattern.
tracing = { workspace = true, default-features = false }

# Every crate that derives `Kind` needs `inventory` reachable on native
# builds so the `aether.kinds` descriptor list picks up its types. Wasm
# guests skip the submission via the derive's cfg gate.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = { workspace = true }

# Integration tests boot a `TestBench`, load this crate's own wasm
# artifact, and assert mail-flow + render properties via direct
# `TestBench` calls. Tests run host-side; the wasm is built separately
# for `wasm32-unknown-unknown` and discovered at runtime under
# `target/wasm32-unknown-unknown/{debug,release}/`.
[dev-dependencies]
aether-substrate-bundle = { path = "../aether-substrate-bundle" }

[lints]
workspace = true
