[package]
name = "aether-mail-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
# Tests need the runtime traits and the macro re-exports. ADR-0032
# dropped the `descriptors` feature — hub-protocol types are always
# available now.
aether-mail = { path = "../aether-mail", features = ["derive"] }
aether-hub-protocol = { path = "../aether-hub-protocol" }
