[package]
name = "aether-mail-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
# Tests need the runtime traits and the macro re-exports. ADR-0032
# dropped the `descriptors` feature — hub-protocol types are always
# available now.
aether-mail = { path = "../aether-mail", features = ["derive"] }
aether-hub-protocol = { path = "../aether-hub-protocol" }
# ADR-0033 wire-shape autodetect: the Kind derive emits
# `decode_from_bytes` bodies that bound on either `bytemuck::AnyBitPattern`
# (cast arm) or `serde::de::DeserializeOwned` (postcard arm). Test
# fixtures here mirror real components by satisfying whichever bound
# matches their wire shape.
bytemuck = { version = "1.19", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# Issue #243: derive(Kind) test fixtures emit `inventory::submit!` on
# native targets; the macro needs `::inventory` reachable in this test
# crate. Tests run native, so unconditional dev-dep is fine — no wasm
# build to skip.
inventory = "0.3"
