[package]
name = "aether-mail"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.19", features = ["derive"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
