[package]
name = "aether-mail"
version.workspace = true
edition.workspace = true

[features]
# Re-export `#[derive(Kind)]` and `#[derive(Schema)]` from
# `aether-mail-derive`. Off by default so guests that hand-write
# `impl Kind for ...` don't pay the proc-macro compile cost.
derive = ["dep:aether-mail-derive"]

[dependencies]
# No feature gate: ADR-0032 moved `aether-hub-protocol` to no_std + alloc
# with framing helpers gated behind its own `std` feature. The schema
# vocabulary and canonical serializers are always available, so the
# `Schema` trait and the derive's `const ID` emission work uniformly
# on host and wasm.
aether-hub-protocol = { path = "../aether-hub-protocol", default-features = false }
aether-id = { path = "../aether-id" }
aether-mail-derive = { path = "../aether-mail-derive", optional = true }
bytemuck = { version = "1.19", features = ["derive"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

# Issue #243: native-side auto-collection of `#[derive(Kind)]` types
# into the substrate's descriptor list. `inventory` requires std and
# does not support `wasm32-unknown-unknown` linkers, so the dep is
# target-gated — wasm guests skip it entirely and the derive's
# `cfg(not(target_arch = "wasm32"))`-gated `submit!` emission is never
# compiled. ADR-0032's wasm `aether.kinds` custom-section path
# remains the wasm-side collection mechanism; this is the native
# mirror.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = "0.3"
