[package]
name = "aether-mcp"
version.workspace = true
edition.workspace = true

# The out-of-process MCP coordinator (issue 763 P5). Claude Code points
# `.mcp.json` at this binary; it owns the `rmcp` HTTP server and the
# tool surface, and reaches engines purely as an RPC *client* — it dials
# the hub's `RpcServerCapability` and relays tool calls as wire `Call`s.
# No `aether-substrate` / wasmtime / wgpu in the dep graph: the MCP
# coordinator never hosts an actor system, it just speaks the wire.
#
# Until the P5d cutover the embedded `aether-substrate-bundle::hub::mcp`
# server keeps running on its own port — this crate is additive.

[[bin]]
name = "aether-mcp"
path = "src/main.rs"

# The lifecycle tunnel (iamacoffeepot/aether#1212 PR 2): the stable MCP
# front Claude connects to on `:8890`. It reverse-proxies `/mcp` to the
# `aether-mcp` child on `:8891` and supervises the hub + `aether-mcp`.
[[bin]]
name = "aether-tunnel"
path = "src/bin/aether-tunnel.rs"

[dependencies]
# Wire vocabulary + the RPC client primitive. `aether-capabilities`
# with default features pulls `aether-substrate`; we only need the
# `rpc::client` types, but the crate isn't split finer than this today
# so we take the native default. (Trimming this is a P5d follow-up.)
aether-capabilities = { path = "../aether-capabilities" }
aether-codec = { path = "../aether-codec" }
aether-data = { path = "../aether-data" }
aether-kinds = { path = "../aether-kinds" }

anyhow = "1"
axum = "0.8"
base64 = "0.22"
futures-util = "0.3"
libc = "0.2"
# The tunnel's upstream HTTP client. `stream` gives us
# `Response::bytes_stream()` so the long-lived SSE GET channel is piped
# through incrementally rather than buffered to EOF. Default features
# (TLS, etc.) are off — the upstream is plain-HTTP localhost.
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
aether-substrate = { path = "../aether-substrate" }
# `StreamReader` bridges reqwest's byte stream into an `AsyncRead` so the
# tunnel's SSE integration test can read events line-by-line as they
# arrive (the back-pressure / no-buffering guard).
tokio-util = { version = "0.7", features = ["io"] }

[lints]
workspace = true
