[package]
name = "aether-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

# The out-of-process MCP coordinator (issue 763 P5). Claude Code points
# `.mcp.json` at this binary; it owns the `rmcp` HTTP server and the
# tool surface, and reaches engines purely as an RPC *client* ā€” it dials
# the hub's `RpcServerCapability` and relays tool calls as wire `Call`s.
# No `aether-substrate` / wasmtime / wgpu in the production dep graph:
# the coordinator depends on `aether-rpc` alone for its wire surface
# (ADR-0102), and `aether-rpc` has no path to the substrate / wasmtime /
# wgpu. Test builds re-enable native `aether-capabilities` through the
# dev-dependency below for the in-process `EngineServer` they spin.
#
# Until the P5d cutover the embedded `aether-substrate-bundle::hub::mcp`
# server keeps running on its own port ā€” this crate is additive.

[[bin]]
name = "aether-mcp"
path = "src/main.rs"

# The lifecycle tunnel (iamacoffeepot/aether#1212 PR 2): the stable MCP
# front Claude connects to on `:8890`. It reverse-proxies `/mcp` to the
# `aether-mcp` child on `:8891` and supervises the hub + `aether-mcp`.
[[bin]]
name = "aether-tunnel"
path = "src/bin/aether-tunnel.rs"

[dependencies]
# ADR-0102: the wire vocabulary (`rpc::{MailEnvelope, MailboxAddress,
# RpcClient, WireFrame, ...}`) + the decentralized trace walk
# (`trace_walk::TreeWalk`) ā€” the coordinator's entire production surface,
# in a crate with no path to `aether-substrate` / wasmtime / wgpu. The
# crate edge is what keeps that trim true under cargo's workspace-wide
# feature unification (a feature flag on `aether-capabilities` cannot).
aether-rpc = { path = "../aether-rpc" }
aether-codec = { path = "../aether-codec" }
aether-data = { path = "../aether-data" }
aether-kinds = { path = "../aether-kinds" }
# The space-time reachability subsystem (issue 1908), default features =
# the pure certifier `#[transform]`s only (no `native`, so no
# `aether-substrate` / wasmtime / wgpu enters the coordinator's production
# graph). The dependency edge is what links those transforms into the
# link-time inventory `describe_transforms` reads.
aether-labyrinth = { path = "../aether-labyrinth" }

anyhow = { workspace = true }
axum = "0.8"
base64 = { workspace = true }
futures-util = "0.3"
libc = "0.2"
# The tunnel's upstream HTTP client. `stream` gives us
# `Response::bytes_stream()` so the long-lived SSE GET channel is piped
# through incrementally rather than buffered to EOF. Default features
# (TLS, etc.) are off ā€” the upstream is plain-HTTP localhost.
reqwest = { version = "0.13", default-features = false, features = ["stream"] }
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
schemars = "1"
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "time", "io-util"] }
tracing = { workspace = true, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `v4` random naming for the reply-`Bytes` spill temp files
# (`aether-reply-<uuid>.bin`, issue 2108) ā€” the same `Uuid::new_v4()`
# staging the contentgen caps use. `aether-data` already pulls `uuid`
# (serde-only); this declares the `v4` feature for the coordinator's own
# build graph so `Uuid::new_v4()` resolves when `aether-mcp` builds alone.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
aether-substrate = { path = "../aether-substrate" }
# ADR-0102: the `tools.rs` test module spins a real in-process
# `EngineServer` (with `EngineConfig`) and touches
# `TraceDispatchCapability` / `InventoryCapability` ā€” all native
# `aether-capabilities` surface. Dev-dependency feature unification
# applies to test builds only, so re-enabling `native` here never
# enters the production graph `cargo tree -p aether-mcp -e normal`
# reports.
aether-capabilities = { path = "../aether-capabilities", features = ["native"] }
# `StreamReader` bridges reqwest's byte stream into an `AsyncRead` so the
# tunnel's SSE integration test can read events line-by-line as they
# arrive (the back-pressure / no-buffering guard).
tokio-util = { version = "0.7", features = ["io"] }

[lints]
workspace = true
