[package]
name = "aether-mesh-viewer-component"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aether-component = { path = "../aether-component" }
aether-kinds = { path = "../aether-kinds" }
aether-mesh-viewer = { path = "../aether-mesh-viewer" }
aether-mesh = { path = "../aether-mesh" }
aether-math = { path = "../aether-math" }
# ADR-0060: tracing facade reaches the substrate's `aether.sink.log`
# via the SDK's `MailSubscriber` (installed by `export!`).
tracing = { version = "0.1", default-features = false }
