[package]
name = "aether-mesh-viewer"
version.workspace = true
edition.workspace = true

# Trunk rlib for the mesh viewer component (ADR-0066). The runtime
# cdylib lives in `aether-mesh-viewer-component`; consumers that want
# to drive a viewer (mail kinds, parameter structs) depend on this
# crate. This crate never depends on `aether-component` and never
# emits FFI exports.

[dependencies]
aether-data = { path = "../aether-data", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

# Issue #243: every crate that derives `Kind` needs `inventory` reachable
# on native builds so the `aether.kinds` substrate descriptor list picks
# up its types. Wasm guests skip the submission via the derive's
# `cfg(not(target_arch = "wasm32"))` gate.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = "0.3"
