[package]
name = "aether-params-codec"
version.workspace = true
edition.workspace = true

# Schema-driven encoding of agent-supplied JSON params into the wire
# bytes the substrate's decode path consumes. ADR-0019 made every
# substrate kind hub-encodable from JSON params; this crate is that
# encoder, factored out of the hub so callers outside the supervisor
# (scenario runner, future tooling) can use the same path without taking
# a heavy dep on `aether-substrate-hub`.
#
# Pure functions, no hub state, no async. Inputs are
# `serde_json::Value` + `aether_hub_protocol::SchemaType`; outputs
# are wire bytes the substrate's existing decoders accept.

[lib]
path = "src/lib.rs"

[dependencies]
aether-hub-protocol = { path = "../aether-hub-protocol" }
aether-mail = { path = "../aether-mail" }
serde_json = "1"

[dev-dependencies]
# Round-trip tests in this crate encode JSON params via the schema
# encoder, then decode the bytes back through `bytemuck::cast` (cast
# kinds), `postcard::from_bytes` (postcard kinds), or a `serde`
# deserialize. Decoder tests also reach for concrete kinds (e.g.
# `SubscribeInput`) to assert tagged-id round-trips. Production
# callers don't need any of this — only pulled in for `cargo test`.
aether-kinds = { path = "../aether-kinds" }
aether-mail = { path = "../aether-mail", features = ["derive"] }
bytemuck = { version = "1.19", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
