[package]
name = "aether-save-counter-component"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
aether-component = { path = "../aether-component" }
aether-kinds = { path = "../aether-kinds" }
aether-mail = { path = "../aether-mail" }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
